<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.harmony.harmonyAndroid.activity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/harmony_pink"
                android:textSize="60sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/grey_rounded_box"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <EditText
                    android:id="@+id/pt_sign_in_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/sign_in_id_input"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/text_grey" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <EditText
                    android:id="@+id/pt_sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/sign_in_pw_input"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_grey" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/btn_sign_in"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/pink_rounded_button"
                    android:text="@string/sign_in_button"
                    android:textColor="#CCFFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_sign_up"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sign_up_button"
                        android:textColor="@color/text_grey"
                        android:textSize="11sp" />

                    <Button
                        android:id="@+id/btn_find_id"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sign_in_find_id"
                        android:textColor="@color/text_grey"
                        android:textSize="11sp" />

                    <Button
                        android:id="@+id/btn_find_pw"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sign_in_find_pw"
                        android:textColor="@color/text_grey"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>