<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MessageSendActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/message_send_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/harmony_pink"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:menu="@menu/send_message_menu"
        app:title="@string/send_new_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/message_info_layout"
        app:layout_constraintTop_toBottomOf="@id/message_send_toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:id="@+id/message_title_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_message_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_title"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pt_input_title"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/pt_input_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"
                android:background="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_message_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:text=""
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@id/message_title_layout"
            android:background="#808080"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:id="@+id/message_receiver_layout"
            app:layout_constraintTop_toBottomOf="@id/message_title_layout"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_message_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver_phone"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pt_input_receiver"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/pt_input_receiver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@null"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_message_receiver"
                app:layout_constraintEnd_toEndOf="parent"
                android:text=""
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@id/message_receiver_layout"
            android:background="#808080"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/input_contents"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_info_layout"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>