<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>

        <variable
            name="isEditing"
            type="java.lang.Boolean" />

        <variable
            name="titleInput"
            type="java.lang.String" />

        <variable
            name="contentsInput"
            type="java.lang.String" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.harmony.harmonyAndroid.activity.MessageBoxActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isEditing ? View.GONE : View.VISIBLE}"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/input_title_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/input_title"
                    android:minHeight="48dp"
                    android:padding="6dp"
                    android:text="@={titleInput}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/input_contents_text"
                    app:layout_constraintEnd_toStartOf="@id/input_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/input_contents_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/input_contents"
                    android:minHeight="48dp"
                    android:padding="6dp"
                    android:text="@={contentsInput}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/input_btn"
                    app:layout_constraintStart_toStartOf="@id/input_title_text"
                    app:layout_constraintTop_toBottomOf="@id/input_title_text" />

                <Button
                    android:id="@+id/input_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/input_title_text"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/message_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/input_layout"
            app:layout_constraintTop_toBottomOf="@id/input_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
